k8s/k8s-argocd-gcp/ingress/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui-ingress
  namespace: default
  annotations:
    haproxy.org/backend-protocol: "http"  # Ensures HAProxy uses HTTP
spec:
  ingressClassName: haproxy
  rules:
  - host: guestbook.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-ui
            port:
              number: 80
